Replace easy Guava code
With direct JVM replacements.